public/css/custom.css
/* ... */
/*
dark-mode selection
 */
.fa-moon {
    color : ghostwhite;
}

.fa-sun {
    color : yellow;
}

/*
scrollbar
 */
body::-webkit-scrollbar {
    width : 14px; /* width of the entire scrollbar */
}

body::-webkit-scrollbar-track {
    background : #212529; /* color of the tracking area */
}

body::-webkit-scrollbar-thumb {
    background-color : #555555; /* color of the scroll thumb */
    border-radius    : 20px; /* roundness of the scroll thumb */
    border           : 3px solid #1a1e21; /* creates padding around scroll thumb */
}

body::-webkit-scrollbar-thumb:hover {
    background-color : #444444;
}

body::-webkit-scrollbar-thumb:active {
    background-color : #5c636a;
}

.list-group, .list-group-item {
    background : whitesmoke;
    color      : black;
    transition : 0.3s;
}

.list-group-item:hover {
    background : lightgray;
}

/*
Pagination
*/
.page-item.active .page-link {
    z-index          : 3;
    color            : #222222 !important;
    background-color : #00acd6 !important;
    border-color     : #00acd6 !important;
    border-radius    : 50%;
    padding          : 6px 12px;
}

.page-link {
    z-index          : 3;
    color            : #222222 !important;
    background-color : #b6effb;
    border-color     : #b6effb;
    border-radius    : 50%;
    padding          : 6px 12px !important;
}

.page-item:first-child .page-link {
    border-radius : 30% !important;
}

.page-item:last-child .page-link {
    border-radius : 30% !important;
}

.pagination li {
    padding : 3px;
}

.disabled .page-link {
    color   : #222222 !important;
    opacity : 0.5 !important;
}

/*
 tooltip
*/
.tooltip-inner {
    font-family : "Helvetica Neue", sans-serif;
}

/*
 category drop-down clicking disabled
 */
.categories-drop-down {
    pointer-events : none;
}

/*
 carousel
 */

.carousel {
    box-shadow : 6px 10px 10px 0 rgba(0, 0, 0, 0.432);
}

.resp-container {
    position    : relative;
    overflow    : hidden;
    padding-top : 56.25%;
}

.resp-iframe {
    position : absolute;
    top      : 0;
    left     : 0;
    width    : 100%;
    height   : 100%;
    border   : 0;
}

/*
 comment-body
 */
.comment-body {
    background : #d9edf7;
}

/*
 custom twitter button
 */
.btn.btn-twitter-custom:hover {
    color : #ffffff;
}

/*
search bar
 */
.search-input {
    background : whitesmoke;
    color      : #000000;
}


/*
responsive design
 */

/* Extra small devices (phones, 600px and down) */
@media only screen and (max-width : 600px) {
    .game-card {
        width      : 175px;
        max-height : 350px;
    }

    .dev-pub-card {
        width      : 200px;
        max-height : 200px;
    }

    .article-card {
        width      : 250px;
        max-height : 350px;
    }

    .card-title {
        font-size : 12px;
    }

    .card-text {
        font-size : 11px;
    }

    .comment-body {
        font-size : 11px;
    }

    .dev-header, .game-header, .pub-header, .sysreq-header {
        font-size : 20px;
    }

    .game-subtitle {
        font-size : 17px;
    }

    .game-info, .article-list-title, .alert {
        font-size : 13px;
    }

    .btn-lg {
        font-size : 15px;
    }

    .footer-text {
        font-size : 12px;
    }

    .search-bar {
        margin : 7px 7px 0 7px;
    }

    .search-form {
        margin-left: 14%;
        margin-right: 14%;
    }

    .search-input::placeholder {
        text-align: center;
    }

    .form-switch {
        margin-left  : 42%;
        margin-right : 42%;
    }

    .lang-switch-form {
        margin-left  : 42%;
        margin-right : 42%;
    }

    ul.ui-autocomplete {
        z-index : 2000;
    }

    #next-arrow-icon, #prev-arrow-icon {
        font-size: 1em;
    }

    .comment-user-text {
        font-size: 14px;
    }

    .comment-sort-form {
        margin-left: 45%;
    }

    .sys-req-icons {
        width: 15px;
        height: 15px;
    }

}

/* Small devices (portrait tablets and large phones, 600px and up) */
@media only screen and (min-width : 600px) and (max-width: 767px) {
    .game-card {
        width      : 175px;
        max-height : 350px;
    }

    .dev-pub-card {
        width      : 200px;
        max-height : 200px;
    }

    .article-card {
        width      : 300px;
        max-height : 400px;
    }

    .card-title {
        font-size : 12px;
    }

    .card-text {
        font-size : 11px;
    }

    .comment-body {
        font-size : 11px;
    }

    .dev-header, .game-header, .pub-header, .sysreq-header {
        font-size : 22px;
    }

    .game-subtitle {
        font-size : 18px;
    }

    .game-info, .article-list-title, .alert {
        font-size : 14px;
    }

    .btn-lg {
        font-size : 16px;
    }

    .footer-text {
        font-size : 13px;
    }

    .search-bar {
        margin : 7px 7px 0 7px;
    }

    .search-form {
        margin-left: 20%;
        margin-right: 20%;
    }

    .search-input::placeholder {
        text-align: center;
    }

    .form-switch {
        margin-left  : 44%;
        margin-right : 44%;
    }

    .lang-switch-form {
        margin-left  : 44%;
        margin-right : 44%;
    }

    ul.ui-autocomplete {
        z-index : 2000;
    }

    #next-arrow-icon, #prev-arrow-icon {
        font-size: 1em;
    }

    .comment-user-text {
        font-size: 15px;
    }

    .comment-sort-form {
        margin-left: 50%;
    }

    .sys-req-icons {
        width: 18px;
        height: 18px;
    }
}
/* ... */

